# raycaster

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Raycaster.sln  rayc  run.bat  run.ps1  run.sh
glfw-3.3.8/: GLFW.sln
glfw-3.3.8/src/: glfw3.pc
maps/: 00.txt
shaders/: shader.frag  shader.fs
src/: app.c  app.cpp  app.h  game_map.h  glad.c  main.c  main.cpp  texture_buffer.h  vec2.h
src/glad/: glad.h
